--- a/app/src/main/res/layout/image_item.xml
+++ b/app/src/main/res/layout/image_item.xml
@@ -4,12 +4,16 @@
     android:layout_height="wrap_content">
 
     <ImageView
+        android:id="@+id/imageView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="300dp"
         android:src="@drawable/ic_launcher_foreground"
-        android:background="@drawable/ic_launcher_background"/>
+        android:background="@drawable/border"
+        android:padding="1dp"
+        android:adjustViewBounds="true"
+        android:scaleType="fitXY" />
 
-    <TextView
+    <!--<TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -17,6 +21,6 @@
         android:text="text"
         android:fontFamily="casual"
         android:layout_margin="1dp"
-        android:textColor="#808080"/>
+        android:textColor="#808080"/>-->
 
 </FrameLayout>
