Full size image is rendered.

--- a/app/src/main/res/layout/image_item.xml
+++ b/app/src/main/res/layout/image_item.xml
@@ -8,6 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:src="@drawable/ic_launcher_foreground"
+        android:clickable="true"
         android:background="@drawable/border"
         android:padding="1dp"
         android:adjustViewBounds="true"
