--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -22,6 +22,18 @@
         android:clickable="true"
         android:onClick="onFavClick"
         android:padding="11dp"
-        android:layout_gravity="end"/>
+        android:layout_alignParentEnd="true"/>
 
-</FrameLayout>
+    <ImageView
+        android:id="@+id/iView"
+        android:layout_width="?actionBarSize"
+        android:layout_height="?actionBarSize"
+        android:src="@drawable/dl"
+        android:tint="@color/colorPrimary"
+        android:clickable="true"
+        android:onClick="onDlClick"
+        android:padding="11dp"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@id/iV"/>
+
+</RelativeLayout>
