--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -18,11 +18,14 @@
         android:layout_width="?actionBarSize"
         android:layout_height="?actionBarSize"
         android:src="@drawable/ic_twotone_favorite_24"
+        android:background="@drawable/ic_baseline_brightness_1_24"
         android:tint="@color/colorPrimary"
-        android:layout_marginTop="27dp"
+        android:layout_marginTop="34dp"
+        android:layout_marginEnd="10dp"
+        android:elevation="2dp"
         android:clickable="true"
         android:onClick="onFavClick"
-        android:padding="11dp"
+        android:padding="10dp"
         android:layout_alignParentEnd="true"/>
 
     <ImageView
@@ -30,10 +33,13 @@
         android:layout_width="?actionBarSize"
         android:layout_height="?actionBarSize"
         android:src="@drawable/dl"
+        android:background="@drawable/ic_baseline_brightness_1_24"
         android:tint="@color/colorPrimary"
         android:clickable="true"
         android:onClick="onDlClick"
-        android:padding="11dp"
+        android:padding="12dp"
+        android:layout_marginTop="27dp"
+        android:layout_marginEnd="10dp"
         android:layout_alignParentEnd="true"
         android:layout_below="@id/iV"/>
 
